--- a/notebooks/00-DataDownload_Optional.ipynb
+++ b/notebooks/00-DataDownload_Optional.ipynb
@@ -78,17 +78,27 @@
     "As part of the DeepLabCut demo setup process, you would run the following additional\n",
     "command, as outlined in their \n",
     "[demo notebook](https://github.com/DeepLabCut/DeepLabCut/blob/master/examples/JUPYTER/Demo_labeledexample_Openfield.ipynb).\n",
-    "These establishes the project path within the demo config file."
+    "These establishes the project path within the demo config file as well as the `training-datasets` directory, which DLC will use for model training"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded, now creating training data...\n",
+      "The training dataset is successfully created. Use the function 'train_network' to start training. Happy training!\n"
+     ]
+    }
+   ],
    "source": [
+    "your_root='/fill/in/your/root/with\\ escaped\\ spaces'\n",
     "from deeplabcut.create_project.demo_data import load_demo_data as dlc_load_demo\n",
-    "dlc_load_demo('<your-root>/openfield-Pranav-2018-10-30/config.yaml')"
+    "dlc_load_demo(your_root+'/openfield-Pranav-2018-10-30/config.yaml')"
    ]
   },
   {
@@ -130,16 +140,9 @@
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "sh: your-root: No such file or directory\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "256"
+       "0"
       ]
      },
      "execution_count": 3,
@@ -148,7 +151,7 @@
     }
    ],
    "source": [
-    "vid_path = '<your-root>/openfield-Pranav-2018-10-30/videos/m3v1mp4'\n",
+    "vid_path = your_root + '/openfield-Pranav-2018-10-30/videos/m3v1mp4'\n",
     "cmd = (f'ffmpeg -n -hide_banner -loglevel error -ss 0 -t 2 -i {vid_path}.mp4 '\n",
     "       + f'-vcodec copy -acodec copy {vid_path}-copy.mp4')\n",
     "import os; os.system(cmd)"
@@ -164,9 +167,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv-dlc",
    "language": "python",
-   "name": "python3"
+   "name": "venv-dlc"
   },
   "language_info": {
    "codemirror_mode": {
