--- a/notebooks/01-Configure.ipynb
+++ b/notebooks/01-Configure.ipynb
@@ -33,13 +33,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "import datajoint as dj\n",
-    "from pathlib import Path\n",
     "# change to the upper level folder to detect dj_local_conf.json\n",
     "if os.path.basename(os.getcwd())=='notebooks': os.chdir('..')\n",
     "assert os.path.basename(os.getcwd())=='workflow-deeplabcut', (\"Please move to the \"\n",
@@ -62,10 +60,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " ····\n"
+     ]
+    }
+   ],
    "source": [
+    "import datajoint as dj\n",
     "import getpass\n",
     "dj.config['database.host'] = '{YOUR_HOST}'\n",
     "dj.config['database.user'] = '{YOUR_USERNAME}'\n",
@@ -155,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,9 +218,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv-dlc",
    "language": "python",
-   "name": "python3"
+   "name": "venv-dlc"
   },
   "language_info": {
    "codemirror_mode": {
