See details. Docker, Notebooks, JupyText, ingest.py
Update docker
Update NBs for 2 schema split
Add jupytext py files
Update ingest to reflect VideoRecording in pipeline
Add ingest feature for train.VideoSet

--- a/notebooks/00-DataDownload_Optional.ipynb
+++ b/notebooks/00-DataDownload_Optional.ipynb
@@ -127,7 +127,7 @@
     "- `-n` do not overwrite\n",
     "- `-hide_banner -loglevel error` less verbose output\n",
     "- `-ss 0 -t 2` start at second 0, add 2 seconds\n",
-    "- `-i {vid_path}` input this video - be sure to change the root\n",
+    "- `-i {vid_path}` input this video\n",
     "- `-{v/a}codec copy` copy the video and audio codecs of the input\n",
     "- `{vid_path}-copy.mp4` output file"
    ]
@@ -166,6 +166,9 @@
   }
  ],
  "metadata": {
+  "jupytext": {
+   "formats": "ipynb,py:percent"
+  },
   "kernelspec": {
    "display_name": "venv-dlc",
    "language": "python",
