--- a/notebooks/01-Configure.ipynb
+++ b/notebooks/01-Configure.ipynb
@@ -157,7 +157,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's check that find the path connects."
+    "Let's check that find the path connects with a tool from [element-interface](https://github.com/datajoint/element-interface)."
    ]
   },
   {
@@ -217,6 +217,9 @@
   }
  ],
  "metadata": {
+  "jupytext": {
+   "formats": "ipynb,py:percent"
+  },
   "kernelspec": {
    "display_name": "venv-dlc",
    "language": "python",
