--- a/notebooks/05-Drop_Optional.ipynb
+++ b/notebooks/05-Drop_Optional.ipynb
@@ -10,8 +10,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Change into the parent directory to find the `dj_local_conf.json` file. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "tags": []
    },
@@ -32,14 +39,7 @@
     "\n",
     "+ Schemas are not typically dropped in a production workflow with real data in it. \n",
     "+ At the developmental phase, it might be required for the table redesign.\n",
-    "+ When dropping all schemas is needed, the following is the dependency order."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Change into the parent directory to find the `dj_local_conf.json` file. "
+    "+ When dropping all schemas is needed, drop items starting with the most downstream."
    ]
   },
   {
@@ -57,21 +57,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# dlc.schema.drop()\n",
+    "# model.schema.drop()\n",
+    "# train.schema.drop()\n",
     "# session.schema.drop()\n",
     "# subject.schema.drop()\n",
     "# lab.schema.drop()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
+  "jupytext": {
+   "formats": "ipynb,py:percent"
+  },
   "kernelspec": {
    "display_name": "venv-dlc",
    "language": "python",
