--- a/notebooks/temp05-Explore.ipynb
+++ b/notebooks/temp05-Explore.ipynb
@@ -426,13 +426,14 @@
    "source": [
     "## Summary and Next Step\n",
     "\n",
-    "+ This notebook highlights the major tables in the workflow and visualize some of the ingested results. \n",
-    "\n",
-    "+ The next notebook [06-drop](06-drop-optional.ipynb) shows how to drop schemas and tables if needed."
+    "+ This notebook highlights the major tables in the workflow and visualize some of the ingested results. \n"
    ]
   }
  ],
  "metadata": {
+  "jupytext": {
+   "formats": "ipynb,py:percent"
+  },
   "kernelspec": {
    "display_name": "venv-dlc",
    "language": "python",
