updates corresponding to element-deeplabcut PR #15

--- a/notebooks/02-WorkflowStructure_Optional.ipynb
+++ b/notebooks/02-WorkflowStructure_Optional.ipynb
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "title": "Each datajoint table class inside the module corresponds to a table inside the schema. For example, the class `ephys.EphysRecording` correponds to the table `_ephys_recording` in the schema `neuro_ephys` in the database."
    },
@@ -693,13 +693,13 @@
        "                            <p id=\"primary\">session_datetime</p>\n",
        "                            <span class=\"djtooltiptext\"></span>\n",
        "                        </div></th><th><div class=\"djtooltip\">\n",
-       "                            <p id=\"primary\">camera_id</p>\n",
-       "                            <span class=\"djtooltiptext\"></span>\n",
-       "                        </div></th><th><div class=\"djtooltip\">\n",
        "                            <p id=\"primary\">recording_id</p>\n",
        "                            <span class=\"djtooltiptext\"></span>\n",
        "                        </div></th><th><div class=\"djtooltip\">\n",
-       "                            <p id=\"primary\">file_path</p>\n",
+       "                            <p id=\"primary\">file_id</p>\n",
+       "                            <span class=\"djtooltiptext\"></span>\n",
+       "                        </div></th><th><div class=\"djtooltip\">\n",
+       "                            <p id=\"nonprimary\">file_path</p>\n",
        "                            <span class=\"djtooltiptext\">filepath of video, relative to root data directory</span>\n",
        "                        </div> </th> </tr> </thead>\n",
        "            <tbody> <tr>  </tr> </tbody>\n",
@@ -709,13 +709,13 @@
        "        "
       ],
       "text/plain": [
-       "*subject    *session_datet *camera_id    *recording_id  *file_path   \n",
-       "+---------+ +------------+ +-----------+ +------------+ +-----------+\n",
+       "*subject    *session_datet *recording_id  *file_id    file_path    \n",
+       "+---------+ +------------+ +------------+ +---------+ +-----------+\n",
        "\n",
        " (Total: 0)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
