--- a/notebooks/04-Automate_Optional.ipynb
+++ b/notebooks/04-Automate_Optional.ipynb
@@ -26,11 +26,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Connecting cbroz@dss-db.datajoint.io:3306\n"
+     ]
+    }
+   ],
    "source": [
     "import os; from pathlib import Path\n",
     "# change to the upper level folder to detect dj_local_conf.json\n",
@@ -73,7 +81,11 @@
     "3. Run automatic scripts prepared in `workflow_deeplabcut.ingest` for ingestion: \n",
     "    + `ingest_subjects` for `subject.Subject`\n",
     "    + `ingest_sessions` - for session tables `Session`, `SessionDirectory`, and `SessionNote`\n",
-    "    + `ingest_dlc_items` - for `VideoRecording` and `TrainingParamSet`"
+    "    + `ingest_dlc_items` - for ...\n",
+    "        - `train.ModelTrainingParamSet`\n",
+    "        - `train.VideoSet` and the corresponding `File` part table\n",
+    "        - `model.VideoRecording` and the corresponding `File` part table\n",
+    "        - `model.RecordingInfo`"
    ]
   },
   {
@@ -88,11 +100,11 @@
       "\n",
       "---- Inserting 0 entry(s) into subject ----\n",
       "\n",
-      "---- Inserting 2 entry(s) into session ----\n",
+      "---- Inserting 0 entry(s) into session ----\n",
       "\n",
-      "---- Inserting 2 entry(s) into session_directory ----\n",
+      "---- Inserting 0 entry(s) into session_directory ----\n",
       "\n",
-      "---- Inserting 2 entry(s) into session_note ----\n",
+      "---- Inserting 0 entry(s) into session_note ----\n",
       "\n",
       "---- Inserting 3 entry(s) into #model_training_param_set ----\n",
       "\n",
@@ -102,7 +114,9 @@
       "\n",
       "---- Inserting 2 entry(s) into video_recording ----\n",
       "\n",
-      "---- Inserting 2 entry(s) into video_recording__file ----\n"
+      "---- Inserting 2 entry(s) into video_recording__file ----\n",
+      "\n",
+      "---- Inserting 2 entry(s) into _recording_info ----\n"
      ]
     }
    ],
