--- a/notebooks/03-Process.ipynb
+++ b/notebooks/03-Process.ipynb
@@ -50,9 +50,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Connecting cbroz@dss-db.datajoint.io:3306\n"
+     ]
+    }
+   ],
    "source": [
     "import datajoint as dj\n",
     "from workflow_deeplabcut.pipeline import lab, subject, session, train, model"
@@ -103,14 +111,14 @@
    "outputs": [],
    "source": [
     "subject.Subject.insert1(dict(subject='subject6', \n",
-    "                             sex='M', \n",
-    "                             subject_birth_date='2020-01-03', \n",
+    "                             sex='F', \n",
+    "                             subject_birth_date='2020-01-01', \n",
     "                             subject_description='hneih_E105'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -182,10 +190,10 @@
        "                            <p id=\"nonprimary\">subject_description</p>\n",
        "                            <span class=\"djtooltiptext\"></span>\n",
        "                        </div> </th> </tr> </thead>\n",
-       "            <tbody> <tr> <td>subject5</td>\n",
-       "<td>F</td>\n",
-       "<td>2020-01-01</td>\n",
-       "<td>rich</td> </tr> </tbody>\n",
+       "            <tbody> <tr> <td>subject6</td>\n",
+       "<td>M</td>\n",
+       "<td>2020-01-03</td>\n",
+       "<td>hneih_E105</td> </tr> </tbody>\n",
        "        </table>\n",
        "        \n",
        "        <p>Total: 1</p></div>\n",
@@ -194,17 +202,17 @@
       "text/plain": [
        "*subject     sex     subject_birth_ subject_descri\n",
        "+----------+ +-----+ +------------+ +------------+\n",
-       "subject5     F       2020-01-01     rich          \n",
+       "subject6     M       2020-01-03     hneih_E105    \n",
        " (Total: 1)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "subject.Subject & \"subject='subject5'\""
+    "subject.Subject & \"subject='subject6'\""
    ]
   },
   {
@@ -250,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -343,13 +351,13 @@
        " (Total: 2)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "session.Session() & \"session_datetime > '2021-06-01 12:00:00'\""
+    "session.Session() & \"session_datetime > '2021-06-01 12:00:00'\" & \"subject='subject6'\""
    ]
   },
   {
@@ -1335,23 +1343,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "key = {'subject': 'subject6',\n",
     "       'session_datetime': '2021-06-02 14:04:22',\n",
-    "       'recording_id': '1', 'camera_id': 1,\n",
-    "       'recording_start_time': '2021-06-02 14:07:00'}\n",
+    "       'recording_id': '1', 'camera_id': 1}\n",
     "model.VideoRecording.insert1(key)\n",
     "                         # do not include an initial `/` in relative file paths   \n",
-    "key.update({'file_path': 'openfield-Pranav-2018-10-30/videos/m3v1mp4-copy.mp4'})\n",
+    "key.update({'file_id': 1, \n",
+    "            'file_path': 'openfield-Pranav-2018-10-30/videos/m3v1mp4-copy.mp4'})\n",
     "model.VideoRecording.File.insert1(key, ignore_extra_fields=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1417,13 +1425,13 @@
        "                            <p id=\"primary\">session_datetime</p>\n",
        "                            <span class=\"djtooltiptext\"></span>\n",
        "                        </div></th><th><div class=\"djtooltip\">\n",
-       "                            <p id=\"primary\">camera_id</p>\n",
-       "                            <span class=\"djtooltiptext\"></span>\n",
-       "                        </div></th><th><div class=\"djtooltip\">\n",
        "                            <p id=\"primary\">recording_id</p>\n",
        "                            <span class=\"djtooltiptext\"></span>\n",
        "                        </div></th><th><div class=\"djtooltip\">\n",
-       "                            <p id=\"primary\">file_path</p>\n",
+       "                            <p id=\"primary\">file_id</p>\n",
+       "                            <span class=\"djtooltiptext\"></span>\n",
+       "                        </div></th><th><div class=\"djtooltip\">\n",
+       "                            <p id=\"nonprimary\">file_path</p>\n",
        "                            <span class=\"djtooltiptext\">filepath of video, relative to root data directory</span>\n",
        "                        </div> </th> </tr> </thead>\n",
        "            <tbody> <tr> <td>subject6</td>\n",
@@ -1437,13 +1445,13 @@
        "        "
       ],
       "text/plain": [
-       "*subject     *session_datet *camera_id    *recording_id  *file_path    \n",
-       "+----------+ +------------+ +-----------+ +------------+ +------------+\n",
-       "subject6     2021-06-02 14: 1             1              openfield-Pran\n",
+       "*subject     *session_datet *recording_id  *file_id    file_path     \n",
+       "+----------+ +------------+ +------------+ +---------+ +------------+\n",
+       "subject6     2021-06-02 14: 1              1           openfield-Pran\n",
        " (Total: 1)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1456,7 +1464,134 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we need to specify if the `PoseEstimation` table should load results from an existing file or trigger the estimation command. Here, we can also specify parameters accepted by the `analyze_videos` function as a dictionary."
+    "To automatically get recording information about this file, we can use the `make` function of the `RecordingInfo` table."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    \n",
+       "    <style type=\"text/css\">\n",
+       "        .Relation{\n",
+       "            border-collapse:collapse;\n",
+       "        }\n",
+       "        .Relation th{\n",
+       "            background: #A0A0A0; color: #ffffff; padding:4px; border:#f0e0e0 1px solid;\n",
+       "            font-weight: normal; font-family: monospace; font-size: 100%;\n",
+       "        }\n",
+       "        .Relation td{\n",
+       "            padding:4px; border:#f0e0e0 1px solid; font-size:100%;\n",
+       "        }\n",
+       "        .Relation tr:nth-child(odd){\n",
+       "            background: #ffffff;\n",
+       "        }\n",
+       "        .Relation tr:nth-child(even){\n",
+       "            background: #f3f1ff;\n",
+       "        }\n",
+       "        /* Tooltip container */\n",
+       "        .djtooltip {\n",
+       "        }\n",
+       "        /* Tooltip text */\n",
+       "        .djtooltip .djtooltiptext {\n",
+       "            visibility: hidden;\n",
+       "            width: 120px;\n",
+       "            background-color: black;\n",
+       "            color: #fff;\n",
+       "            text-align: center;\n",
+       "            padding: 5px 0;\n",
+       "            border-radius: 6px;\n",
+       "            /* Position the tooltip text - see examples below! */\n",
+       "            position: absolute;\n",
+       "            z-index: 1;\n",
+       "        }\n",
+       "        #primary {\n",
+       "            font-weight: bold;\n",
+       "            color: black;\n",
+       "        }\n",
+       "        #nonprimary {\n",
+       "            font-weight: normal;\n",
+       "            color: white;\n",
+       "        }\n",
+       "\n",
+       "        /* Show the tooltip text when you mouse over the tooltip container */\n",
+       "        .djtooltip:hover .djtooltiptext {\n",
+       "            visibility: visible;\n",
+       "        }\n",
+       "    </style>\n",
+       "    \n",
+       "    <b></b>\n",
+       "        <div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
+       "        <table border=\"1\" class=\"Relation\">\n",
+       "            <thead> <tr style=\"text-align: right;\"> <th> <div class=\"djtooltip\">\n",
+       "                            <p id=\"primary\">subject</p>\n",
+       "                            <span class=\"djtooltiptext\"></span>\n",
+       "                        </div></th><th><div class=\"djtooltip\">\n",
+       "                            <p id=\"primary\">session_datetime</p>\n",
+       "                            <span class=\"djtooltiptext\"></span>\n",
+       "                        </div></th><th><div class=\"djtooltip\">\n",
+       "                            <p id=\"primary\">recording_id</p>\n",
+       "                            <span class=\"djtooltiptext\"></span>\n",
+       "                        </div></th><th><div class=\"djtooltip\">\n",
+       "                            <p id=\"nonprimary\">px_height</p>\n",
+       "                            <span class=\"djtooltiptext\">height in pixels</span>\n",
+       "                        </div></th><th><div class=\"djtooltip\">\n",
+       "                            <p id=\"nonprimary\">px_width</p>\n",
+       "                            <span class=\"djtooltiptext\">width in pixels</span>\n",
+       "                        </div></th><th><div class=\"djtooltip\">\n",
+       "                            <p id=\"nonprimary\">nframes</p>\n",
+       "                            <span class=\"djtooltiptext\">number of frames</span>\n",
+       "                        </div></th><th><div class=\"djtooltip\">\n",
+       "                            <p id=\"nonprimary\">fps</p>\n",
+       "                            <span class=\"djtooltiptext\">(Hz) frames per second</span>\n",
+       "                        </div></th><th><div class=\"djtooltip\">\n",
+       "                            <p id=\"nonprimary\">recording_datetime</p>\n",
+       "                            <span class=\"djtooltiptext\">Datetime for the start of the recording</span>\n",
+       "                        </div></th><th><div class=\"djtooltip\">\n",
+       "                            <p id=\"nonprimary\">recording_duration</p>\n",
+       "                            <span class=\"djtooltiptext\">video duration in seconds</span>\n",
+       "                        </div> </th> </tr> </thead>\n",
+       "            <tbody> <tr> <td>subject6</td>\n",
+       "<td>2021-06-02 14:04:22</td>\n",
+       "<td>1</td>\n",
+       "<td>480</td>\n",
+       "<td>640</td>\n",
+       "<td>63</td>\n",
+       "<td>30</td>\n",
+       "<td>None</td>\n",
+       "<td>2.1</td> </tr> </tbody>\n",
+       "        </table>\n",
+       "        \n",
+       "        <p>Total: 1</p></div>\n",
+       "        "
+      ],
+      "text/plain": [
+       "*subject     *session_datet *recording_id  px_height     px_width     nframes     fps     recording_date recording_dura\n",
+       "+----------+ +------------+ +------------+ +-----------+ +----------+ +---------+ +-----+ +------------+ +------------+\n",
+       "subject6     2021-06-02 14: 1              480           640          63          30      None           2.1           \n",
+       " (Total: 1)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.RecordingInfo.populate()\n",
+    "model.RecordingInfo()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " Next, we need to specify if the `PoseEstimation` table should load results from an existing file or trigger the estimation command. Here, we can also specify parameters accepted by the `analyze_videos` function as a dictionary."
    ]
   },
   {
