Generalize equipment table

--- a/notebooks/03-Process.ipynb
+++ b/notebooks/03-Process.ipynb
@@ -11,7 +11,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## Interactively run the workflow\n",
     "\n",
@@ -30,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,27 +52,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Connecting cbroz@dss-db.datajoint.io:3306\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import datajoint as dj\n",
-    "from workflow_deeplabcut.pipeline import lab, subject, session, train, model"
+    "from workflow_deeplabcut.pipeline import lab, subject, session, train, model\n",
+    "\n",
+    "# Directing our pipeline to the appropriate config location\n",
+    "from element_interface.utils import find_full_path\n",
+    "from workflow_deeplabcut.paths import get_dlc_root_data_dir\n",
+    "config_path = find_full_path(get_dlc_root_data_dir(), \n",
+    "                             'openfield-Pranav-2018-10-30/config.yaml')"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
-    "#### Inserting entries into upstream tables"
+    "### Inserting entries into upstream tables"
    ]
   },
   {
@@ -106,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,9 +365,12 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
-    "## Inserting recordings"
+    "### Inserting recordings"
    ]
   },
   {
@@ -376,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,9 +497,12 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
-    "## Training a DLC Network"
+    "### Training a DLC Network"
    ]
   },
   {
@@ -558,12 +567,9 @@
    "outputs": [],
    "source": [
     "import yaml\n",
-    "from element_interface.utils import find_full_path\n",
-    "from workflow_deeplabcut.paths import get_dlc_root_data_dir\n",
     "\n",
     "paramset_idx = 1; paramset_desc='OpenField'\n",
-    "config_path = find_full_path(get_dlc_root_data_dir(), \n",
-    "                             'openfield-Pranav-2018-10-30/config.yaml')\n",
+    "\n",
     "with open(config_path, 'rb') as y:\n",
     "    config_params = yaml.safe_load(y)\n",
     "training_params = {'shuffle': '1',\n",
@@ -842,9 +848,12 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
-    "## Tracking Joints/Body Parts"
+    "### Tracking Joints/Body Parts"
    ]
   },
   {
@@ -955,9 +964,12 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
-    "## Declaring a Model"
+    "### Declaring a Model"
    ]
   },
   {
@@ -1118,7 +1130,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Model Evaluation"
+    "### Model Evaluation"
    ]
   },
   {
@@ -1331,7 +1343,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Pose Estimation"
+    "### Pose Estimation"
    ]
   },
   {
@@ -1343,7 +1355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1359,7 +1371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1451,7 +1463,7 @@
        " (Total: 1)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1469,7 +1481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1577,7 +1589,7 @@
        " (Total: 1)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
