--- a/notebooks/04-Automate_Optional.ipynb
+++ b/notebooks/04-Automate_Optional.ipynb
@@ -61,7 +61,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# session.Session.delete()\n",
+    "# (session.Session & 'subject=\"subject6\"').delete()\n",
     "# train.TrainingParamSet.delete()\n",
     "# train.VideoSet.delete()"
    ]
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -98,13 +98,13 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "---- Inserting 0 entry(s) into subject ----\n",
+      "---- Inserting 1 entry(s) into subject ----\n",
       "\n",
-      "---- Inserting 0 entry(s) into session ----\n",
+      "---- Inserting 3 entry(s) into session ----\n",
       "\n",
-      "---- Inserting 0 entry(s) into session_directory ----\n",
+      "---- Inserting 3 entry(s) into session_directory ----\n",
       "\n",
-      "---- Inserting 0 entry(s) into session_note ----\n",
+      "---- Inserting 3 entry(s) into session_note ----\n",
       "\n",
       "---- Inserting 3 entry(s) into #model_training_param_set ----\n",
       "\n",
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +250,143 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "6. Add a pose estimation task, and launch pose estimation.\n",
+    "6. Auto-populate the `RecordingInfo` table with relevant fields."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    \n",
+       "    <style type=\"text/css\">\n",
+       "        .Relation{\n",
+       "            border-collapse:collapse;\n",
+       "        }\n",
+       "        .Relation th{\n",
+       "            background: #A0A0A0; color: #ffffff; padding:4px; border:#f0e0e0 1px solid;\n",
+       "            font-weight: normal; font-family: monospace; font-size: 100%;\n",
+       "        }\n",
+       "        .Relation td{\n",
+       "            padding:4px; border:#f0e0e0 1px solid; font-size:100%;\n",
+       "        }\n",
+       "        .Relation tr:nth-child(odd){\n",
+       "            background: #ffffff;\n",
+       "        }\n",
+       "        .Relation tr:nth-child(even){\n",
+       "            background: #f3f1ff;\n",
+       "        }\n",
+       "        /* Tooltip container */\n",
+       "        .djtooltip {\n",
+       "        }\n",
+       "        /* Tooltip text */\n",
+       "        .djtooltip .djtooltiptext {\n",
+       "            visibility: hidden;\n",
+       "            width: 120px;\n",
+       "            background-color: black;\n",
+       "            color: #fff;\n",
+       "            text-align: center;\n",
+       "            padding: 5px 0;\n",
+       "            border-radius: 6px;\n",
+       "            /* Position the tooltip text - see examples below! */\n",
+       "            position: absolute;\n",
+       "            z-index: 1;\n",
+       "        }\n",
+       "        #primary {\n",
+       "            font-weight: bold;\n",
+       "            color: black;\n",
+       "        }\n",
+       "        #nonprimary {\n",
+       "            font-weight: normal;\n",
+       "            color: white;\n",
+       "        }\n",
+       "\n",
+       "        /* Show the tooltip text when you mouse over the tooltip container */\n",
+       "        .djtooltip:hover .djtooltiptext {\n",
+       "            visibility: visible;\n",
+       "        }\n",
+       "    </style>\n",
+       "    \n",
+       "    <b></b>\n",
+       "        <div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
+       "        <table border=\"1\" class=\"Relation\">\n",
+       "            <thead> <tr style=\"text-align: right;\"> <th> <div class=\"djtooltip\">\n",
+       "                            <p id=\"primary\">subject</p>\n",
+       "                            <span class=\"djtooltiptext\"></span>\n",
+       "                        </div></th><th><div class=\"djtooltip\">\n",
+       "                            <p id=\"primary\">session_datetime</p>\n",
+       "                            <span class=\"djtooltiptext\"></span>\n",
+       "                        </div></th><th><div class=\"djtooltip\">\n",
+       "                            <p id=\"primary\">recording_id</p>\n",
+       "                            <span class=\"djtooltiptext\"></span>\n",
+       "                        </div></th><th><div class=\"djtooltip\">\n",
+       "                            <p id=\"nonprimary\">px_height</p>\n",
+       "                            <span class=\"djtooltiptext\">height in pixels</span>\n",
+       "                        </div></th><th><div class=\"djtooltip\">\n",
+       "                            <p id=\"nonprimary\">px_width</p>\n",
+       "                            <span class=\"djtooltiptext\">width in pixels</span>\n",
+       "                        </div></th><th><div class=\"djtooltip\">\n",
+       "                            <p id=\"nonprimary\">nframes</p>\n",
+       "                            <span class=\"djtooltiptext\">number of frames</span>\n",
+       "                        </div></th><th><div class=\"djtooltip\">\n",
+       "                            <p id=\"nonprimary\">fps</p>\n",
+       "                            <span class=\"djtooltiptext\">(Hz) frames per second</span>\n",
+       "                        </div></th><th><div class=\"djtooltip\">\n",
+       "                            <p id=\"nonprimary\">recording_datetime</p>\n",
+       "                            <span class=\"djtooltiptext\">Datetime for the start of the recording</span>\n",
+       "                        </div></th><th><div class=\"djtooltip\">\n",
+       "                            <p id=\"nonprimary\">recording_duration</p>\n",
+       "                            <span class=\"djtooltiptext\">video duration in seconds</span>\n",
+       "                        </div> </th> </tr> </thead>\n",
+       "            <tbody> <tr> <td>subject5</td>\n",
+       "<td>2020-04-15 11:16:38</td>\n",
+       "<td>3</td>\n",
+       "<td>747</td>\n",
+       "<td>832</td>\n",
+       "<td>60</td>\n",
+       "<td>30</td>\n",
+       "<td>None</td>\n",
+       "<td>2.0</td></tr><tr><td>subject6</td>\n",
+       "<td>2021-06-03 14:43:10</td>\n",
+       "<td>2</td>\n",
+       "<td>480</td>\n",
+       "<td>640</td>\n",
+       "<td>63</td>\n",
+       "<td>30</td>\n",
+       "<td>None</td>\n",
+       "<td>2.1</td> </tr> </tbody>\n",
+       "        </table>\n",
+       "        \n",
+       "        <p>Total: 2</p></div>\n",
+       "        "
+      ],
+      "text/plain": [
+       "*subject     *session_datet *recording_id  px_height     px_width     nframes     fps     recording_date recording_dura\n",
+       "+----------+ +------------+ +------------+ +-----------+ +----------+ +---------+ +-----+ +------------+ +------------+\n",
+       "subject5     2020-04-15 11: 3              747           832          60          30      None           2.0           \n",
+       "subject6     2021-06-03 14: 2              480           640          63          30      None           2.1           \n",
+       " (Total: 2)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.RecordingInfo.populate()\n",
+    "model.RecordingInfo()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "7. Add a pose estimation task, and launch pose estimation.\n",
     "   - Get all primary key information for a given recording\n",
     "   - Add the model and `task_mode` (i.e., load vs. trigger) to be applied\n",
     "   - Add any additional analysis parameters for `deeplabcut.analyze_videos`"
@@ -273,7 +409,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "7. Retrieve estimated position data."
+    "8. Retrieve estimated position data."
    ]
   },
   {
