--- a/notebooks/02-WorkflowStructure_Optional.ipynb
+++ b/notebooks/02-WorkflowStructure_Optional.ipynb
@@ -62,9 +62,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Connecting cbroz@dss-db.datajoint.io:3306\n"
+     ]
+    }
+   ],
    "source": [
     "import datajoint as dj\n",
     "from workflow_deeplabcut.pipeline import lab, subject, session, train, model"
@@ -625,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "title": "Each datajoint table class inside the module corresponds to a table inside the schema. For example, the class `ephys.EphysRecording` correponds to the table `_ephys_recording` in the schema `neuro_ephys` in the database."
    },
@@ -715,7 +723,7 @@
        " (Total: 0)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
