WIP: all tests pass locally

--- a/notebooks/03-Process.ipynb
+++ b/notebooks/03-Process.ipynb
@@ -948,7 +948,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Insert 4 new body part(s)? [yes, no]:  yes\n"
@@ -2027,9 +2027,9 @@
    "formats": "ipynb,py:percent"
   },
   "kernelspec": {
-   "display_name": "venv-dlc",
+   "display_name": "Python 3.8.11 ('ele')",
    "language": "python",
-   "name": "venv-dlc"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2041,7 +2041,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.11"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "61456c693db5d9aa6731701ec9a9b08ab88a172bee0780139a3679beb166da16"
+   }
   }
  },
  "nbformat": 4,
