WIP: docker edits. notebook revamp. incomplete

--- a/notebooks/01-Configure.ipynb
+++ b/notebooks/01-Configure.ipynb
@@ -24,11 +24,11 @@
     "tags": []
    },
    "source": [
-    "- To run `workflow-deeplabcut`, we need to set up the DataJoint configuration file, called `dj_local_conf.json`, unique to each machine.\n",
+    "- To run `workflow-deeplabcut`, we need to set up the DataJoint config file, called `dj_local_conf.json`, unique to each machine.\n",
     "\n",
-    "- The config only needs to be set up once. If you have gone through the configuration before, directly go to [02-Workflow-Structure](./02-WorkflowStructure_Optional.ipynb).\n",
+    "- The config only needs to be set up once. If you already have one, skip to [02-Workflow-Structure](./02-WorkflowStructure_Optional.ipynb).\n",
     "\n",
-    "- By convention, we set the config up in the root directory of `workflow-deeplabcut` package. After you set up DataJoint once, you may be interested in [setting a global config](https://docs.datajoint.org/python/setup/01-Install-and-Connect.html)."
+    "- By convention, we set a local config in the workflow directory. You may be interested in [setting a global config](https://docs.datajoint.org/python/setup/01-Install-and-Connect.html)."
    ]
   },
   {
@@ -55,7 +55,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now let's set up the host, user and password in the `dj.config` following [instructions here](https://tutorials.datajoint.io/setting-up/get-database.html)."
+    "Now we can set up credentials following [instructions here](https://tutorials.datajoint.io/setting-up/get-database.html)."
    ]
   },
   {
@@ -64,7 +64,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       " ····\n"
@@ -99,7 +99,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Configure the `custom` field in `dj.config` for element-deeplabcut"
+    "### Configure the `custom` field"
    ]
   },
   {
@@ -113,9 +113,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Giving a prefix to your schema could help manage privelages on a server. \n",
-    "- If we set prefix `neuro_`, every schema created with the current workflow will start with `neuro_`, e.g. `neuro_lab`, `neuro_subject`, `neuro_imaging` etc.\n",
-    "- Teams who work on the same schemas should use the same prefix, set as follows:"
+    "A schema prefix can help manage privelages on a server. Teams who work on the same schemas should use the same prefix\n",
+    "\n",
+    "Setting the prefix to `neuro_` means that every schema we then create will start with `neuro_` (e.g. `neuro_lab`, `neuro_subject`, `neuro_model` etc.)"
    ]
   },
   {
@@ -138,10 +138,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `custom` field also keeps track of your root directory with `dlc_root_data_dir`. It can even accept roots. element-deeplabcut will always figure out which root to use based on the files it expects there. \n",
-    "\n",
-    "- Please set one root to the parent directory of DLC's `openfield-Pranav-2018-10-30` example.\n",
-    "- In other cases, this should be the parent of your DLC project path."
+    "`dlc_root_data_dir` sets the root path(s) for the Element. Given multiple, the Element will always figure out which root to use based on the files it expects there. This should be the directory above your DeepLabCut project path."
    ]
   },
   {
@@ -150,35 +147,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dj.config['custom'] = {'dlc_root_data_dir' : ['your-root1', 'your-root2']}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's check that find the path connects with a tool from [element-interface](https://github.com/datajoint/element-interface)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "dj.config['custom'] = {'dlc_root_data_dir' : ['/tmp/test_data/', '/tmp/example/']}\n",
+    "\n",
+    "# Check the connection with `find_full_path`\n",
     "from element_interface.utils import find_full_path\n",
     "data_dir = find_full_path(dj.config['custom']['dlc_root_data_dir'],\n",
-    "                          'openfield-Pranav-2018-10-30')\n",
-    "assert data_dir.exists(), \"Please check the that you have the folder openfield-Pranav\""
+    "                          'from_top_tracking')\n",
+    "assert data_dir.exists(), \"Please check the that you have the from_top_tracking folder\""
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Save the config as a json file\n",
+    "## Save the config as a json\n",
     "\n",
-    "With the proper configurations, we could save this as a file, either as a local json file, or a global file."
+    "Once set, the config can either be saved locally or globally. \n",
+    "\n",
+    "- The local config would be saved as `dj_local_conf.json` in the workflow directory. This is usefull for managing multiple (demo) pipelines.\n",
+    "- A global config would be saved as `datajoint_config.json` in the home directory.\n",
+    "\n",
+    "When imported, DataJoint will first check for a local config. If none, it will check for a global config."
    ]
   },
   {
@@ -187,24 +176,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dj.config.save_local()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The local config is saved as `dj_local_conf.json` in the root directory of this `workflow-deeplabcut`. Next time you import DataJoint while in this directory, the same settings will be loaded.\n",
-    "\n",
-    "If saved globally, there will be a hidden configuration file saved in your computer's root directory that will be loaded when no local version is present."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "dj.config.save_local()\n",
     "# dj.config.save_global()"
    ]
   },
@@ -221,9 +193,9 @@
    "formats": "ipynb,py:percent"
   },
   "kernelspec": {
-   "display_name": "venv-dlc",
+   "display_name": "Python 3.8.11 ('ele')",
    "language": "python",
-   "name": "venv-dlc"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -235,7 +207,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.11"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "61456c693db5d9aa6731701ec9a9b08ab88a172bee0780139a3679beb166da16"
+   }
   }
  },
  "nbformat": 4,
