--- a/notebooks/00-DataDownload_Optional.ipynb
+++ b/notebooks/00-DataDownload_Optional.ipynb
@@ -20,120 +20,88 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We've structured this tool around the example data available from the DLC. If you've already cloned the [main DLC repository](https://github.com/DeepLabCut/DeepLabCut), you already have this folder under `examples/openfield-Pranav-2018-10-30`."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "[This link](https://downgit.github.io/#/home?url=https://github.com/DeepLabCut/DeepLabCut/tree/master/examples/openfield-Pranav-2018-10-30) via [DownGit](https://downgit.github.io/) will start the single-directory download \n",
-    "automatically as a zip. Unpack this zip and place it in a directory we'll refer to as your root."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Directory structure"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "After downloading, the directory will be organized as follows within your chosen root\n",
-    "directory.\n",
+    "These notebooks are built around data provided by DataJoint, including a well-trained model. For similar content using data from DeepLabCut, see [09-AlternateDataset](./09-AlternateDataset.ipynb).\n",
     "\n",
-    "```\n",
-    " /your-root/openfield-Pranav-2018-10-30/\n",
-    "   - config.yaml\n",
-    "   - labeled-data\n",
-    "      - m4s1\n",
-    "          - CollectedData_Pranav.csv\n",
-    "          - CollectedData_Pranav.h5\n",
-    "          - img0000.png\n",
-    "          - img0001.png\n",
-    "          - img0002.png\n",
-    "          - img{...}.png\n",
-    "          - img0114.png\n",
-    "          - img0115.png\n",
-    "   - videos\n",
-    "       - m3v1mp4.mp4\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "For those unfamiliar with DLC...\n",
-    "- `config.yaml` contains all the key parameters of the project, including\n",
-    "   - file locations (currently empty)\n",
-    "   - body parts\n",
-    "   - cropping information\n",
-    "- `labeled-data` includes the frames coordinates for each body part in the training video\n",
-    "- `videos` includes the full training video for this example\n",
-    "\n",
-    "As part of the DeepLabCut demo setup process, you would run the following additional\n",
-    "command, as outlined in their \n",
-    "[demo notebook](https://github.com/DeepLabCut/DeepLabCut/blob/master/examples/JUPYTER/Demo_labeledexample_Openfield.ipynb).\n",
-    "These establishes the project path within the demo config file as well as the `training-datasets` directory, which DLC will use for model training"
+    "DataJoint provides various datasets via `djarchive`. To pip install..."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "shellscript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "pip install git+https://github.com/datajoint/djarchive-client.git"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "your_root='/fill/in/your/root/with\\ escaped\\ spaces'\n",
-    "from deeplabcut.create_project.demo_data import load_demo_data\n",
-    "load_demo_data(your_root+'/openfield-Pranav-2018-10-30/config.yaml')"
+    "import os; import djarchive_client\n",
+    "client = djarchive_client.client()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For your own data, we recommend using the DLC gui to intitialize your project and label the data. "
+    "We can browse available datasets:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['t',\n",
+       " 'workflow-array-ephys-benchmark',\n",
+       " 'workflow-calcium-imaging-test-set',\n",
+       " 'workflow-dlc-data',\n",
+       " 'workflow-facemap',\n",
+       " 'workflow-trial']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(client.datasets())"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Make new video"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Later, we'll use the first few seconds of the training video as a 'separate session' to model\n",
-    "the pose estimation feature of this pipeline. `ffmpeg` is a dependency of DeepLabCut\n",
-    "that can splice the training video for a demonstration purposes. The command below saves\n",
-    "the first 2 seconds of the training video as a copy.\n",
-    "\n",
-    "- `-n` do not overwrite\n",
-    "- `-hide_banner -loglevel error` less verbose output\n",
-    "- `-ss 0 -t 2` start at second 0, add 2 seconds\n",
-    "- `-i {vid_path}` input this video\n",
-    "- `-{v/a}codec copy` copy the video and audio codecs of the input\n",
-    "- `{vid_path}-copy.mp4` output file"
+    "Datasets have different versions available:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "[('t', '1'),\n",
+       " ('workflow-array-ephys-benchmark', '0.1.0a4'),\n",
+       " ('workflow-array-ephys-benchmark', 'v1'),\n",
+       " ('workflow-calcium-imaging-test-set', '0_1_0a2'),\n",
+       " ('workflow-dlc-data', 'v1'),\n",
+       " ('workflow-facemap', '0.0.0'),\n",
+       " ('workflow-trial', '0.0.0b1')]"
       ]
      },
      "execution_count": 3,
@@ -142,16 +110,135 @@
     }
    ],
    "source": [
-    "vid_path = your_root + '/openfield-Pranav-2018-10-30/videos/m3v1mp4'\n",
-    "cmd = (f'ffmpeg -n -hide_banner -loglevel error -ss 0 -t 2 -i {vid_path}.mp4 '\n",
-    "       + f'-vcodec copy -acodec copy {vid_path}-copy.mp4')\n",
-    "import os; os.system(cmd)"
+    "list(client.revisions())"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We can make a directory for downloading:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.makedirs('/tmp/test_data', exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then run download for a given set and the revision:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(79, 0)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "client.download('workflow-dlc-data',\n",
+    "                target_directory='/tmp/test_data/', \n",
+    "                revision='v1')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Directory organization\n",
+    "\n",
+    "After downloading, the directory will be organized as follows:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "/tmp/test_data/from_top_tracking/\n",
+    "- config.yml\n",
+    "- dlc-models/iteration-0/from_top_trackingFeb23-trainset95shuffle1/\n",
+    "    - test/pose_cfg.yaml\n",
+    "    - train/\n",
+    "        - checkpoint\n",
+    "        - checkpoint_orig\n",
+    "        ─ learning_stats.csv\n",
+    "        ─ log.txt\n",
+    "        ─ pose_cfg.yaml\n",
+    "        ─ snapshot-10300.data-00000-of-00001\n",
+    "        ─ snapshot-10300.index\n",
+    "        ─ snapshot-10300.meta   # same for 103000\n",
+    "- labeled-data/\n",
+    "    - train1/\n",
+    "        - CollectedData_DJ.csv\n",
+    "        - CollectedData_DJ.h5\n",
+    "        - img00674.png          # and others\n",
+    "    - train2/                   # similar to above\n",
+    "- videos/\n",
+    "    - test.mp4\n",
+    "    - train1.mp4\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will use this dataset as an example across this series of notebooks. If you use another dataset, change the path accordingly.\n",
+    "\n",
+    "- `config.yaml` contains key parameters of the project\n",
+    "- `labeled-data` includes pixel coordinates for each body part\n",
+    "- `videos` includes the full training and inference videos\n",
+    "\n",
+    "This workflow contains additional functions for setting up this demo data, including adding absolute paths to config files and shortening the inference video to speed up pose estimation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading DLC 2.2.1.1...\n",
+      "DLC loaded in light mode; you cannot use any GUI (labeling, relabeling and standalone GUI)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from workflow_deeplabcut.load_demo_data import setup_bare_project, shorten_video\n",
+    "\n",
+    "setup_bare_project(project=\"/tmp/test_data/from_top_tracking\", \n",
+    "                   net_type = \"mobilenet_v2_1.0\") # sets paths\n",
+    "shorten_video(\"/tmp/test_data/from_top_tracking/videos/test.mp4\",\n",
+    "              output_path=None,first_n_sec=2) # makes test-2s.mp4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For your own data, we recommend using the DLC gui to intitialize your project and label the data. \n",
+    "\n",
     "In the next notebook, [01-Configure](./01-Configure.ipynb), we'll set up the DataJoint config file with a pointer to your root data directory."
    ]
   }
@@ -161,9 +248,9 @@
    "formats": "ipynb,py:percent"
   },
   "kernelspec": {
-   "display_name": "venv-dlc",
+   "display_name": "Python 3.8.11 ('ele')",
    "language": "python",
-   "name": "venv-dlc"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -175,11 +262,16 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.11"
   },
   "toc-autonumbering": false,
   "toc-showcode": false,
-  "toc-showmarkdowntxt": false
+  "toc-showmarkdowntxt": false,
+  "vscode": {
+   "interpreter": {
+    "hash": "61456c693db5d9aa6731701ec9a9b08ab88a172bee0780139a3679beb166da16"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 4
