Update intro tutorial notebook

--- a/notebooks/tutorial.ipynb
+++ b/notebooks/tutorial.ipynb
@@ -11,29 +11,42 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "## Interactively run the workflow"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Open-source data pipeline to automate analyses and organize data.\n",
     "\n",
-    "The workflow requires a DeepLabCut project with labeled data.\n",
-    "- If you don't have data, refer to [00-DataDownload](./00-DataDownload_Optional.ipynb) and [01-Configure](./01-Configure.ipynb).\n",
-    "- For an overview of the schema, refer to [02-WorkflowStructure](02-WorkflowStructure_Optional.ipynb).\n",
-    "- For a more automated approach, refer to [03-Automate](03-Automate_Optional.ipynb)."
+    "In this tutorial, we will walk through creating, testing, and analyzing a pose estimation model using DeepLabCut.\n",
+    "\n",
+    "For detailed documentation and tutorials on general DataJoint principles that support collaboration, automation, reproducibility, and visualizations:\n",
+    "\n",
+    "[`DataJoint for Python - Interactive Tutorials`](https://github.com/datajoint/datajoint-tutorials) - Fundamentals including table tiers, query operations, fetch operations, automated computations with the make function, etc.\n",
+    "\n",
+    "[`DataJoint for Python - Documentation`](https://datajoint.com/docs/core/datajoint-python/0.14/)\n",
+    "\n",
+    "[`DataJoint Element for DeepLabCut - Documentation`](https://datajoint.com/docs/elements/element-deeplabcut/0.2/)"
+   ]
+   },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Setup"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's change the directory to load the local config, `dj_local_conf.json`."
+    "### 1.1. Sample dataset in a DeepLabCut project"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "These notebooks are built around data provided by DataJoint, including a well-trained model. \n",
+    "\n",
+    "We will use the following dataset `DeepLabCut project example` as an example across this tutorial. You can download this project example here:"
    ]
   },
   {
