Recover files from git rm

--- a/notebooks/tutorial.ipynb
+++ b/notebooks/tutorial.ipynb
@@ -394,7 +394,9 @@
    "source": [
     "from element_interface.utils import find_full_path\n",
     "dj.config.load('dj_local_conf.json')\n",
-    "data_dir = find_full_path(dj.config['custom']['dlc_root_data_dir'], # root from config\n",
+    "data_dir = ./exa \n",
+    "\n",
+    "find_full_path(dj.config['custom']['dlc_root_data_dir'], # root from config\n",
     "                          'Top_tracking-DataJoint-2023-08-03')       \n",
     "               # DLC project dir"
    ]
