add summary section

--- a/notebooks/tutorial.ipynb
+++ b/notebooks/tutorial.ipynb
@@ -79,26 +79,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### **Documentation and tutorials**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "For detailed documentation and tutorials on general DataJoint principles that support collaboration, automation, reproducibility, and visualizations:\n",
-    "\n",
-    "[`DataJoint for Python - Interactive Tutorials`](https://github.com/datajoint/datajoint-tutorials) covers fundamentals, including table tiers, query operations, fetch operations, automated computations with the make function, and more.\n",
-    "\n",
-    "[`DataJoint for Python - Documentation`](https://datajoint.com/docs/core/datajoint-python/0.14/)\n",
-    "\n",
-    "[`DataJoint Element for DeepLabCut - Documentation`](https://datajoint.com/docs/elements/element-deeplabcut/0.2/)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### **Setup**"
    ]
   },
@@ -3011,6 +2991,52 @@
    "metadata": {},
    "source": [
     "We have generated the spatial mapping plot for both body parts, head and tail base."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Summary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Following this tutorial, we've efficiently:\n",
+    "- covered the essential functionality of `element-deeplabcut`\n",
+    "- acquired the skills to integrate an existing DLC model into the pipeline\n",
+    "- insert data into tables\n",
+    "- execute the pose estimation procedure\n",
+    "- visualize the outcomes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Documentation and DataJoint tutorials"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For detailed documentation on `element-deeplabcut`:\n",
+    "\n",
+    "[`DataJoint Element for DeepLabCut - Documentation`](https://datajoint.com/docs/elements/element-deeplabcut/0.2/)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For detailed documentation and tutorials on general DataJoint principles that support collaboration, automation, reproducibility, and visualizations:\n",
+    "\n",
+    "[`DataJoint for Python - Interactive Tutorials`](https://github.com/datajoint/datajoint-tutorials) covers fundamentals, including table tiers, query operations, fetch operations, automated computations with the make function, and more.\n",
+    "\n",
+    "[`DataJoint for Python - Documentation`](https://datajoint.com/docs/core/datajoint-python/0.14/)"
    ]
   }
  ],
